View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026805 | Open CASCADE | OCCT:Coding | public | 2015-10-23 21:19 | 2016-04-20 15:51 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026805: Visualization, Graphic3d_GraphicDriver - drop outdated unsupported methods for debugging | ||||
Description | Graphic3d_GraphicDriver contains the following outdated methods which should be dropped:Standard_EXPORT void PrintBoolean (const Standard_CString AComment, const Standard_Boolean AValue) const; Standard_EXPORT void PrintCLight (const Graphic3d_CLight& ACLight, const Standard_Integer AField) const; Standard_EXPORT void PrintCStructure (const Graphic3d_CStructure& ACStructure, const Standard_Integer AField) const; Standard_EXPORT void PrintCView (const Graphic3d_CView& ACView, const Standard_Integer AField) const; Standard_EXPORT void PrintFunction (const Standard_CString AFunc) const; Standard_EXPORT void PrintInteger (const Standard_CString AComment, const Standard_Integer AValue) const; Standard_EXPORT void PrintIResult (const Standard_CString AFunc, const Standard_Integer AResult) const; Standard_EXPORT void PrintShortReal (const Standard_CString AComment, const Standard_ShortReal AValue) const; Standard_EXPORT void PrintMatrix (const Standard_CString AComment, const TColStd_Array2OfReal& AMatrix) const; Standard_EXPORT void PrintString (const Standard_CString AComment, const Standard_CString AString) const; Standard_EXPORT void SetTrace (const Standard_Integer ALevel); Standard_EXPORT Standard_Integer Trace() const; | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26805 has been created by kgv. SHA-1: b61e5cb1d9c1a7fbe6fc2d303e80488e6d1ac4aa Detailed log of new commits: Author: kgv Date: Fri Oct 23 21:45:27 2015 +0300 0026805: Visualization, Graphic3d_GraphicDriver - drop outdated unsupported methods for debugging Drop methods PrintBoolean(), PrintCLight(), PrintCStructure(), PrintCView(), PrintFunction(), PrintInteger(), PrintIResult(), PrintShortReal(), PrintMatrix(), PrintString(), SetTrace(), Trace(). |
|
Please check compilation, testing is not needed. |
|
Dear BugMaster, Branch CR26805 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms. SHA-1: b61e5cb1d9c1a7fbe6fc2d303e80488e6d1ac4aa Number of compiler warnings: occt component: Linux: 1 (1 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) |
|
Branch CR26805 has been deleted by kgv. SHA-1: b61e5cb1d9c1a7fbe6fc2d303e80488e6d1ac4aa |
occt: master 6146a808 2015-10-23 18:45:27 Committer: bugmaster Details Diff |
0026805: Visualization, Graphic3d_GraphicDriver - drop outdated unsupported methods for debugging Drop methods PrintBoolean(), PrintCLight(), PrintCStructure(), PrintCView(), PrintFunction(), PrintInteger(), PrintIResult(), PrintShortReal(), PrintMatrix(), PrintString(), SetTrace(), Trace(). |
Affected Issues 0026805 |
|
mod - src/Graphic3d/Graphic3d_GraphicDriver.cxx | Diff File | ||
mod - src/Graphic3d/Graphic3d_GraphicDriver.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-10-23 21:19 | kgv | New Issue | |
2015-10-23 21:19 | kgv | Assigned To | => kgv |
2015-10-23 21:45 | git | Note Added: 0047405 | |
2015-10-23 21:46 | kgv | Note Added: 0047406 | |
2015-10-23 21:46 | kgv | Assigned To | kgv => bugmaster |
2015-10-23 21:46 | kgv | Status | new => resolved |
2015-10-23 21:46 | kgv | Status | resolved => reviewed |
2015-10-23 21:46 | kgv | Relationship added | child of 0023117 |
2015-10-26 12:08 |
|
Assigned To | bugmaster => apv |
2015-10-26 12:13 |
|
Test case number | => Not needed |
2015-10-27 11:41 |
|
Note Added: 0047471 | |
2015-10-27 11:41 |
|
Assigned To | apv => bugmaster |
2015-10-27 11:41 |
|
Status | reviewed => tested |
2015-10-30 16:00 | bugmaster | Changeset attached | => occt master 6146a808 |
2015-10-30 16:00 | bugmaster | Status | tested => verified |
2015-10-30 16:00 | bugmaster | Resolution | open => fixed |
2016-04-17 14:35 | git | Note Added: 0053204 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |