0026805: Visualization, Graphic3d_GraphicDriver - drop outdated unsupported methods for debugging

Drop methods PrintBoolean(), PrintCLight(), PrintCStructure(), PrintCView(), PrintFunction(), PrintInteger(),
PrintIResult(), PrintShortReal(), PrintMatrix(), PrintString(), SetTrace(), Trace().